# haskell-99-problems

./: .gitignore  .travis.yml  Makefile  README.md  haskell-ninety-nine-problems.cabal
Problems/: H01.hs  H02.hs  H03.hs  H04.hs  H05.hs  H06.hs  H07.hs  H08.hs  H09.hs  H10.hs  H11.hs  H12.hs  H13.hs  H14.hs  H15.hs  H16.hs  H17.hs  H18.hs  H19.hs  H20.hs  H21.hs  H22.hs  H23.hs  H24.hs
h/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs
tests/: doctest.hs
