name:                haskell-ninety-nine-problems
version:             0.0.0.0
author:              Matt Audesse
maintainer:          matt@mattaudesse.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    exposed-modules:
        Problems.H01
        Problems.H02
        Problems.H03
        Problems.H04
        Problems.H05
        Problems.H06
        Problems.H07
        Problems.H08
        Problems.H09
        Problems.H10
        Problems.H11
        Problems.H12
        Problems.H13
        Problems.H14
        Problems.H15
    build-depends:          base
    default-language:       Haskell2010

test-suite doctest
    type:                   exitcode-stdio-1.0
    default-language:       Haskell2010
    hs-source-dirs:         tests
    ghc-options:            -threaded -Wall
    main-is:                doctest.hs
    build-depends:          base, QuickCheck, doctest >= 0.9.3
