name:                haskell-ninety-nine-problems
version:             0.0.0.0
author:              Matt Audesse
maintainer:          matt@mattaudesse.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
category:            Example
license:             PublicDomain
synopsis:            Solutions to the "Ninety-Nine Haskell Problems" code challenges.
description:         Solutions to the "Ninety-Nine Haskell Problems" code challenges.
                     See: https://wiki.haskell.org/H-99:_Ninety-Nine_Haskell_Problems
source-repository    head
    type:            git
    location:        https://github.com/mattaudesse/haskell-99-problems

library
    exposed-modules:
        Problems.H01
        Problems.H02
        Problems.H03
        Problems.H04
        Problems.H05
        Problems.H06
        Problems.H07
        Problems.H08
        Problems.H09
        Problems.H10
        Problems.H11
        Problems.H12
        Problems.H13
        Problems.H14
        Problems.H15
        Problems.H16
        Problems.H17
        Problems.H18
        Problems.H19
        Problems.H20
        Problems.H21
        Problems.H22
        Problems.H23
        Problems.H24
    build-depends:          base >= 4.7.0.2 && < 4.9, random == 1.1, QuickCheck
    default-language:       Haskell2010

test-suite doctest
    type:                   exitcode-stdio-1.0
    default-language:       Haskell2010
    hs-source-dirs:         tests
    ghc-options:            -threaded -Wall
    main-is:                doctest.hs
    build-depends:          base >= 4.7.0.2 && < 4.9,
                            QuickCheck,
                            doctest >= 0.9.3,
                            random == 1.1
